--- a/css/laith_style.css
+++ b/css/laith_style.css
@@ -1,131 +1,39 @@
-article, section { display: block; }
+@import url(http://fonts.googleapis.com/css?family=Raleway:300);
 
-html,
-body { overflow: hidden; }
-
-html,
-body,
-#content,
-.page {
-    width: 100%;
-    height: 100%;
-}
-
-.check, .shownavigation {
-    cursor: pointer;
-    width: 50px;
-    height: 50px;
-    margin: 10px;
-    background-color: #ccc;
-    background-color: rgba(255,255,255,.1);
-    background-repeat: no-repeat;
-    background-position: center center;
-    border-radius: 50%;
-    transition: all 0.25s ease;
+*{margin:0}
+.container{
+    height:100%;
+    width:100%;
     position: relative;
-    top: 2em;
-    left: 2em;
-    box-shadow: inset 0 1px 2px #333;
-    display: inline-block;
+}
+canvas{
+    background:#222;
+
 }
 
-.shownavigation:after {
+.text{
+    color:#0072c5;
+    font:70px  'Raleway',Arial;
+    letter-spacing:20px;
     position: absolute;
-    content: '';
-    width: 40%;
-    height: 3px;
-    background-color: #555;
-    top: 50%;
-    margin-top: -1px;
-    left: 30%;
-    box-shadow: 0 -7px #555, 0 7px #555;
+    padding:20px 0;
+    text-align:center;
+    top:40%;
+    transition:all 1s;
+    width:100%;
+}
+span{
+    color:transparent;
+    text-shadow:0 0 10px #222,0 0 20px #0072c5;
 }
 
-input, .check { display: none; }
-
-.check:hover, .shownavigation:hover {
-    background-color: #f0f0f0;
-    background-color: rgba(255,255,255,.75);
-    box-shadow: 0 1px 2px #333;
+.text:hover{
+    letter-spacing:0px;
+    background:#222;
 }
 
-#showradio:checked + label,
-.move:checked + label,
-.move:checked + label:hover {
-    background-color: #000;
-    background-color: rgba(255,255,255,.5);
-    cursor: default;
-    box-shadow: 0 1px 2px #333;
+.text:hover span{
+    color: #c5190f;
+    text-shadow:none;
 }
 
-#showradio:checked + label { cursor: pointer; }
-#showradio:checked + label:hover {background-color: #fff;}
-
-#content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -100;
-    transition: all 0.25s ease-out;
-}
-
-.page {
-    display: block;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-#one {
-    background-color: #00acee;
-    background-image: url(../images/home-512.png);
-}
-
-#two {
-    background-color: #3b5998;
-    background-image: url(../images/book_alt2-512.png);
-}
-
-#three {
-    background-color: #dc4b39;
-    background-image: url(../images/mail-512.png);
-}
-
-#four {
-    background-color: #989898;
-    background-image: url(../images/magnifying_glass-512.png);
-}
-
-#showradio:checked ~ .radio { display: inline-block; }
-
-.home { background-image: url(../images/home-20.png); }
-.mail { background-image: url(../images/mail-20.png); }
-.find { background-image: url(../images/magnifying_glass-20.png); }
-.book { background-image: url(../images/book_alt2-20.png); }
-
-.active { background-color: #fff; }
-
-@media (min-width:641px) {
-    #page2:checked ~ #content { top: -100%; }
-    #page3:checked ~ #content { top: -200%; }
-    #page4:checked ~ #content { top: -300%; }
-}
-
-@media (max-width:640px) {
-    .check, .shownavigation {
-        width: 40px;
-        height: 40px;
-    }
-    .page { display: none; }
-    #page1:checked ~ #content #one,
-    #page2:checked ~ #content #two,
-    #page3:checked ~ #content #three,
-    #page4:checked ~ #content #four { display: block; }
-    .shownavigation, #showradio:checked ~ .radio { display: block; }
-}
-
-@media (max-width:480px) {
-    .check, .shownavigation {
-        top: 0.25em;
-        left: 0.25em;
-    }
-}
