--- a/css/laith_style.css
+++ b/css/laith_style.css
@@ -4,6 +4,7 @@
     margin: 0
 }
 
+
 #canvas-wrap {
     /*position: relative;*/
     background-color: #222;
@@ -18,7 +19,7 @@
     height: 80%;
 }
 
-.overlay #android {
+.overlay .android {
     background: #ccc;
     width: 100%;
     height: 100%;
@@ -31,7 +32,7 @@
 }
 
 
-.overlay #cool {
+.overlay .cool {
     margin-top: 100px;
     background: #ccc;
     width: 100%;
@@ -44,7 +45,7 @@
     float: left;
 }
 
-.overlay #music {
+.overlay .music {
     margin-top: 100px;
     background: #ccc;
     width: 100%;
@@ -57,7 +58,7 @@
     float: left;
 }
 
-.overlay #videogames {
+.overlay .videogames {
     margin-top: 100px;
     background: #ccc;
     width: 100%;
