--- a/css/social.scss
+++ b/css/social.scss
@@ -1,23 +1,26 @@
 #contact-me {
   position: fixed;
-  bottom:20px;
-  width:100%;
+  bottom: 20px;
+  width: 100%;
   #wrapper {
     text-align: center;
     //margin:0px auto; //here it will make center
-    width: 300px;
-
+    width: 360px
   }
 
   .social {
-    transform-origin: 50% 0%;
-    transform: scale(0) Y(-190px);
-    transition: .5s;
+
+    //margin-left: -530px;
+    //
+    //&:hover {
+    //  margin-left: 0px;
+    //}
+
+
     #arrow {
       background-color: silver;
       border-bottom-right-radius: 10px;
       border-top-right-radius: 10px;
-
 
       font-size: 20px;
       cursor: pointer;
@@ -40,6 +43,15 @@
     height: 46px;
     padding: 0;
     list-style: none;
+    margin-left: -300px;
+
+    transform-origin: 50% 0%;
+    transform: scale(0) Y(-190px);
+    transition: .5s;
+
+    &:hover {
+      margin-left: 0px;
+    }
   }
 
   ul li {
