--- a/css/social.scss
+++ b/css/social.scss
@@ -10,24 +10,20 @@
 
   .social {
 
-    //margin-left: -530px;
-    //
-    //&:hover {
-    //  margin-left: 0px;
-    //}
-
-
     #arrow {
       background-color: silver;
       border-bottom-right-radius: 10px;
       border-top-right-radius: 10px;
+      background:silver url('../images/arrow-right.png') no-repeat 4px 0px;
+
+      background-size: 50px 50px;
 
       font-size: 20px;
       cursor: pointer;
       width: 60px;
-      margin: 0;
+      //margin: 0;
       padding: 12px 0;
-      text-align: center;
+      //text-align: center;
       float: left;
       display: block;
       height: 22px;
@@ -85,23 +81,26 @@
   //}
 
   li[class*="twitter"] {
-    background: #6CDFEA;
+    background:#6CDFEA url('../images/twitter.png') no-repeat 11px 6px;
     padding: 12px 0;
+
   }
+
   li[class*="gplus"] {
-    background: #E34429;
+    background: #E34429 url("../images/googleplus.png") no-repeat 16px 6px;
     padding: 12px 0;
   }
   li[class*="facebook"] {
-    background: #3B5998;
+    background: #3B5998 url("../images/facebook.png") no-repeat 14px 8px ;
     padding: 12px 0;
   }
-  li[class*="dropbox"] {
-    background: #8DC5F2;
+  li[class*="linkedin"] {
+    background: #8DC5F2 url("../images/linkedin.png") no-repeat 14px 6px;
     padding: 12px 0;
   }
   li[class*="github"] {
-    background: #9C7A5B;
+    background: #9C7A5B url("../images/github.png") no-repeat 14px 10px;
     padding: 12px 0;
   }
+
 }
