--- a/css/laith_style.css
+++ b/css/laith_style.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:300);
-
 * {
     margin: 0
 }
@@ -83,10 +81,10 @@
     width: 100%;
 }
 
-span {
-    color: transparent;
-    text-shadow: 0 0 10px #222, 0 0 20px #0072c5;
-}
+/*span {*/
+    /*color: transparent;*/
+    /*text-shadow: 0 0 10px #222, 0 0 20px #0072c5;*/
+/*}*/
 
 .text:hover {
     letter-spacing: 0px;
